--- a/layout-parts/q1/css/style.css
+++ b/layout-parts/q1/css/style.css
@@ -9,7 +9,7 @@
 }
 
 .block {
-  padding: 10px;
+  padding: 20px;
 }
 
 .block > li  {
@@ -18,6 +18,7 @@
   float: left;
   padding: 20px;
   margin-left: 20px;
+
 }
 
 .item1 {
@@ -25,6 +26,10 @@
   width: 170px;
   background-color: #eaf4ff;
   border: 10px solid #022336;
+}
+
+.block > li:first-child {
+  margin-left: 0;
 }
 
 .clearfix::before,
