--- a/layout-parts/q2/css/style.css
+++ b/layout-parts/q2/css/style.css
@@ -5,5 +5,28 @@
   width: 900px;
   background-color: #eff3f4;
   margin: 0 auto;
+  padding: 20px;
+  font-size: 18px;
+  line-height: 22px;
+  word-break: break-all;
+}
+
+.image1 {
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 10px;
+}
+
+.image2 {
+  margin-left: 20px;
+  margin-bottom: 10px;
+  float: right;
+}
+
+.clearfix::before,
+.clearfix::after {
+  display: block;
+  content: '';
+  clear: both;
 }
 /* 回答はここに書いてね */
