--- a/layout-parts/q4/css/style.css
+++ b/layout-parts/q4/css/style.css
@@ -9,17 +9,30 @@
   position: relative;
 }
 
-.box1 {
+.box-layout {
   position: absolute;
-  top: 40px;
-  left: 200px;
-  background-color: #ffefd3;
   width: 100px;
   height: 100px;
-  text-align:center;
+  text-align: center;
   font-size: 20px;
   font-weight: bold;
   line-height: 100px;
+}
+
+.frame {
+  position: relative;
+}
+
+.box9 {
+  top: 10px;
+  left: 10px;
+  background-color: #2b69a3;
+}
+
+.box1 {
+  top: 40px;
+  left: 200px;
+  background-color: #ffefd3;
   z-index: 1;
 }
 
@@ -35,103 +48,52 @@
 }
 
 .box8 {
-  position: absolute;
   top: 120px;
   left: 120px;
   background-color: #de70cf;
-  width: 100px;
-  height: 100px;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  line-height: 100px;
   z-index: 8;
 }
 
 .box2 {
-  position: absolute;
   top: 120px;
   left: 280px;
   background-color: #7084de;
-  width: 100px;
-  height: 100px;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  line-height: 100px;
   z-index: 2;
 }
 
 .box3 {
-  position: absolute;
   top: 200px;
   left: 360px;
   background-color: #d0ecea;
-  width: 100px;
-  height: 100px;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  line-height: 100px;
   z-index: 3;
 }
 
 .box4 {
-  position: absolute;
   top: 280px;
   left: 280px;
   background-color: #8b7a5e;
-  width: 100px;
-  height: 100px;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  line-height: 100px;
   z-index: 4;
 }
 
 .box5 {
-  position: absolute;
   top: 360px;
   left: 200px;
   background-color: #9fd6d2;
-  width: 100px;
-  height: 100px;
-  text-align:center;
-  font-size: 20px;
-  font-weight: bold;
-  line-height: 100px;
   z-index: 5;
 }
 
 .box6 {
-  position: absolute;
   top: 280px;
   left: 120px;
   background-color: #fffee4;
-  width: 100px;
-  height: 100px;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  line-height: 100px;
   z-index: 6;
 }
 
 .box7 {
-  position: absolute;
   top: 200px;
   left: 40px;
   background-color: #deae70;
-  width: 100px;
-  height: 100px;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  line-height: 100px;
   z-index: 7;
 }
-
-
 
 /* 回答はここに書いてね */
