--- a/layout-parts/q6/css/style.css
+++ b/layout-parts/q6/css/style.css
@@ -11,16 +11,15 @@
 }
 
 .common-layout {
-  margin-right: 10px;
-  float: left;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
   margin-right: 10px;
   float: left;
   font-weight: bold;
   text-align: center;
   color: #fff;
   background-color: #00bcd4;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
 }
 
 .common1 {
@@ -45,14 +44,15 @@
 }
 
 .error-layout {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
   margin-right: 10px;
   float: left;
   font-weight: bold;
   text-align: center;
   color: #fff;
   background-color: #ff4081;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
 }
 
 .error1 {
@@ -77,15 +77,15 @@
 }
 
 .disabled-layout {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
   margin-right: 10px;
   float: left;
   font-weight: bold;
-  display: block;
   text-align: center;
   color: #fff;
   background-color: #e5e5e5;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
 }
 
 .disabled1 {
@@ -110,14 +110,15 @@
 }
 
 .shadow-layout {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
   margin-right: 10px;
   float: left;
   font-weight: bold;
   text-align: center;
   color: #000;
   background-color: #fff;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
   box-shadow: 0 1px 6px rgba(0, 0, 0, .12);
 }
 
