--- a/layout-parts/q11/css/style.css
+++ b/layout-parts/q11/css/style.css
@@ -1,5 +1,66 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.container {
+  position: relative;
+  overflow: hidden;
+  width: 500px;
+  height: 333px;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+.content {
+  transition: .5s;
+}
+
+.inner {
+  position: absolute;
+  bottom: -100%;
+  width: 100%;
+  height: 100%;
+  transition: .5s;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .8));
+}
+
+.container:hover .inner {
+  transition: .5s;
+  bottom: 0;
+}
+
+.container:hover .content {
+  transform: scale(1.5);
+  transition: .5s;
+  width: 100%;
+  height: 100%;
+}
+
+.text {
+  font-size: 16px;
+  bottom: 0;
+  line-height: 16px;
+  padding: 20px;
+  width: 100%;
+  color: #fff;
+  box-sizing: border-box;
+  word-break: break-all;
+  position: absolute;
+}
+
+.loader {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  border: 10px solid #ecf1f2;
+  border-top-color: #00bcd4;
+  border-radius: 50%;
+  animation: asakura 1.1s linear infinite;
+}
+
+@keyframes asakura {
+  0% { transform: rotate(0deg);}
+  50% { transform: rotate(180deg);}
+  100% { transform: rotate(360deg);}
+}
 
 /* 回答はここに書いてね */
